styles/style.scss
@use "@fontsource/raleway/scss/mixins" as OpenSans;
@use "img-comparison-slider/dist/styles.css";
@use "_code.scss";
@use "_image-carousel.scss";
@use "_image-comparison-slider.scss";
@use "_table.scss";

$fa-font-path: "fontawesome";

@import "@fortawesome/fontawesome-free/scss/fontawesome";
@import "@fortawesome/fontawesome-free/scss/solid";
@import "@fortawesome/fontawesome-free/scss/brands";

@include OpenSans.fontFace(
  $weight: 400,
  $display: fallback,
  $fontDir: "fontsource"
);

$background-color: #ececec;
$content-background-color: #fcfcfc;
$highlight-color: rgb(255, 135, 0);
$link-color: #2a7ae2;
$spacing-unit: 30px;

html,
body {
  margin: 0;
  padding: 0;
}

body {
  background-color: $background-color;
  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 12pt;
  line-height: 1.5;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
hr,
dl,
dd,
ol,
ul,
figure {
  margin: 0 0 calc($spacing-unit / 2) 0;
  padding: 0;
}

ul,
ol {
  margin-left: $spacing-unit;
}

ul {
  list-style: circle outside;
}

li {
  margin-bottom: calc($spacing-unit / 4);
}

.content {
  background-color: $content-background-color;
  padding: 16px 8px;
}

img,
video {
  height: auto;
  max-width: 100%;
}

.swiffy-slider img {
  object-fit: contain;
}

.image-comparison-slider img {
  object-fit: contain;
  width: auto;
}

a {
  color: $link-color;
  text-decoration: underline;
  text-decoration-color: transparent;
  transition: color 1s ease,
    text-decoration-color 1s ease;

  &:hover {
    color: $highlight-color;
    text-decoration-color: initial;
  }
}

.me {
  margin-bottom: 60px;
  text-align: center;
}

.me img {
  border-radius: 30px;
  display: inline-block;
  margin-bottom: 30px;
  vertical-align: text-bottom;
}

.me .location,
.me .contact-email,
.me .contact-phone {
  white-space: nowrap;
}

.social-links {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.how-i-work {
  text-align: center;
}

.how-i-work-values {
  display: flex;
  flex-wrap: wrap;
}

.how-i-work-values img {
  margin-left: 20%;
  margin-right: 20%;
  max-height: 100px;
}

.postlist {
  display: flex;
  flex-direction: column;
  gap: 8px;
  margin: 0;
  padding-left: 0;
}

.postlist-item {
  display: flex;
  flex-direction: column;
  gap: 6px;
  list-style-type: none;
  margin: 0;
}

.postlist-item-content {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.postlist-date {
  color: #777;
  font-size: 87.5%;
}

.postlist-item-thumbnail {
  margin-right: 30px;
  max-height: 120px;
  width: 120px;
}

.postlist-item-thumbnail img {
  aspect-ratio: 16/10;
  object-fit: contain;
}

.postlist-item-content {
  flex-grow: 1;
}

.postlist-link {
  font-size: 14pt;
}

.toc {
  border: 1px solid #a2a9b1;
  font-size: 11pt;
  padding: 7px;
}

.toc ol {
  list-style-type: none;
}

.external-link::after {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z'/%3E%3Cpath fill-rule='evenodd' d='M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z'/%3E%3C/svg%3E");
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  content: "";
  display: inline-block;
  height: 11px;
  margin-left: 4px;
  width: 11px;
}

h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
h6 a {
  visibility: hidden;
}

h1:hover a,
h2:hover a,
h3:hover a,
h4:hover a,
h5:hover a,
h6:hover a {
  visibility: visible;
}

.task-list {
  list-style-type: none;
  padding-left: 0;
}

kbd {
  border: 1px solid #000;
  border-radius: 2px;
  padding: 2px;
}

.quote {
  margin: 0;
}

blockquote {
  background: #ccc;
  border-radius: 0.5em;
  font-family: Lucida Sans Typewriter, Lucida Console, monaco, Bitstream Vera Sans Mono, monospace;
  font-size: 11pt;
  padding: 0.3em 1em;
}

blockquote,
figcaption {
  margin: 0.3em;
}

figcaption {
  font-style: italic;
}

.github-link {
  display: flex;
}

.github-link span {
  align-self: center;
  margin-right: 10px;
}

.github-link img {
  width: 50px;
}

.site-header {
  border-bottom: 1px solid $highlight-color;
  padding: 4px;
}

.site-header-content {
  align-items: center;
  display: flex;
  justify-content: space-between;
  margin: 0 auto;
  max-width: 1060px;
  padding-left: 8px;
  padding-right: 8px;
}

.site-title {
  align-self: center;
  font-size: 20pt;
}

.site-header a {
  transition: none;

  &,
  &:visited {
    color: #424242;
  }
}

.site-nav .menu-icon {
  display: none;
}

$site-nav-width: 38px;
$site-nav-spacing: calc($site-nav-width / 4);

.site-nav-items {
  background-color: $background-color;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  gap: calc($spacing-unit / 4);
  justify-content: center;
  left: 0;
  list-style-type: none;
  margin: 0;
  max-height: 0;
  overflow: hidden;
  position: absolute;
  top: 49px;
  transition: all 0.2s cubic-bezier(0.77, 0.2, 0.05, 1);
  width: 100%;
}

.site-nav-items li {
  margin: 0;
}

#nav-toggle {
  display: none;
}

.nav-button-container {
  align-items: center;
  cursor: pointer;
  display: flex;
  flex-direction: column;
  height: $site-nav-width;
  justify-content: center;
  width: $site-nav-width;
}

.nav-button,
.nav-button::before,
.nav-button::after {
  background-color: #000;
  border-radius: 2px;
  display: block;
  height: 3px;
  position: absolute;
  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
    background-color 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
    opacity 0.5s ease;
  width: calc($site-nav-width * 0.8);
}

.nav-button::before {
  content: "";
  margin-top: -$site-nav-spacing;
}

.nav-button::after {
  content: "";
  margin-top: $site-nav-spacing;
}

#nav-toggle:checked+.nav-button-container .nav-button::before {
  transform: translate(0, $site-nav-spacing) rotate(45deg);
}

#nav-toggle:checked+.nav-button-container .nav-button {
  background: rgba(0, 0, 0, 0);
}

#nav-toggle:checked+.nav-button-container .nav-button::after {
  transform: translate(0, -$site-nav-spacing) rotate(-45deg);
}

#nav-toggle:checked~.site-nav-items {
  max-height: 100%;
  padding: $spacing-unit;
}

@media only screen and (min-width: 641px) {
  @import "_large";
}

@media only print {
  @import "_print";
}

